[package]
name = "pokus1"
version = "0.1.0"
authors = ["ibisek <ibisek@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tokio = "1.14.0"
#tokio = {version = "1.14.0", features=["time"]}
#tokio = {version = "1.14.0", features=["full"]}
regex = "1.5.4"
chrono = "0.4.19"
serde = "1.0.131"
serde_json = "1.0.73"
lazy_static = "1.4.0"
